# hcc-ai-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.py  lightspeed-stack.yaml  main.py  mcp-servers.yaml  metrics_server.py  migrations.py  proxy.py  pyproject.toml  run.yaml  test_entrypoint.py  test_migrations.py
.tekton/: hcc-ai-assistant-pull-request.yaml  hcc-ai-assistant-push.yaml
config/: clowdapp.yaml
docs/: architecture-guidelines.md  deployment-guidelines.md  testing-guidelines.md
embedding-service/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_main.py
mcp-discovery-service/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  mcp_server.py  pyproject.toml  test_main.py  test_mcp_server.py
