[project]
name = "mcp-discovery-service"
version = "1.0.0"
description = "MCP Discovery Service - Discovers and indexes MCP tools with vector embeddings"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]==0.32.0",
    "pyyaml==6.0.2",
    "httpx>=0.27.0",  # Aligned with embedding-service
    "mcp[cli]==1.26.0",
    "pydantic>=2.11.0,<3.0.0",
    "starlette>=0.37.2,<0.42.0",  # Aligned with embedding-service
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.14.8",
    "black>=24.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "mcp_server"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "asyncio: mark test as async",
]
